added displayTaxes feature

--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@
                   >6.5</small
                 >
               </div>
+              <div
+                class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full tax-element hidden"
+              >
+                <span
+                  class="inline-flex items-center justify-center bg-white py-2 px-4"
+                >
+                  <i class="fa-solid fa-hand-holding-dollar mr-2"></i>
+                  <small class="capitalize tracking-widest">taxes</small>
+                </span>
+                <small
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] taxes-deep"
+                  >6.5</small
+                >
+              </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
                 <span
                   class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
@@ -215,6 +229,20 @@
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] general-hours"
                   >4</small
+                >
+              </div>
+              <div
+                class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full tax-element hidden"
+              >
+                <span
+                  class="inline-flex items-center justify-center bg-white py-2 px-4"
+                >
+                  <i class="fa-solid fa-hand-holding-dollar mr-2"></i>
+                  <small class="capitalize tracking-widest">taxes</small>
+                </span>
+                <small
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] taxes-general"
+                  >6.5</small
                 >
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
@@ -293,6 +321,20 @@
                   >2.5</small
                 >
               </div>
+              <div
+                class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full tax-element hidden"
+              >
+                <span
+                  class="inline-flex items-center justify-center bg-white py-2 px-4"
+                >
+                  <i class="fa-solid fa-hand-holding-dollar mr-2"></i>
+                  <small class="capitalize tracking-widest">taxes</small>
+                </span>
+                <small
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] taxes-weekly"
+                  >6.5</small
+                >
+              </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
                 <span
                   class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
@@ -369,6 +411,20 @@
                   >3</small
                 >
               </div>
+              <div
+                class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full tax-element hidden"
+              >
+                <span
+                  class="inline-flex items-center justify-center bg-white py-2 px-4"
+                >
+                  <i class="fa-solid fa-hand-holding-dollar mr-2"></i>
+                  <small class="capitalize tracking-widest">taxes</small>
+                </span>
+                <small
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] taxes-bi-weekly"
+                  >6.5</small
+                >
+              </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
                 <span
                   class="inline-flex items-center justify-center bg-white p-2 cursor-pointer"
@@ -443,6 +499,20 @@
                 <small
                   class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] monthly-hours"
                   >3.25</small
+                >
+              </div>
+              <div
+                class="bg-slate-200 py-2 w-4/5 mx-auto mb-3 md:w-full tax-element hidden"
+              >
+                <span
+                  class="inline-flex items-center justify-center bg-white py-2 px-4"
+                >
+                  <i class="fa-solid fa-hand-holding-dollar mr-2"></i>
+                  <small class="capitalize tracking-widest">taxes</small>
+                </span>
+                <small
+                  class="py-2 px-4 bg-emerald-600 text-white font-semibold tracking-widest inline-block w-[90px] taxes-monthly"
+                  >6.5</small
                 >
               </div>
               <div class="bg-slate-200 py-2 px-4 w-4/5 mx-auto md:w-full">
