added sidbar component

--- a/index.html
+++ b/index.html
@@ -24,6 +24,77 @@
     <h1 class="text-3xl font-semibold text-center py-4 font-serif">
       Maid Quote Calculator
     </h1>
+    <!-- Sidebar -->
+    <div
+      class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:-translate-x-1 hover:rounded-tl-none hover:rounded-bl-none hover:bg-emerald-600 transition-all shadow-2xll flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 md:-translate-x-24 group"
+    >
+      <div
+        class="flex flex-col items-center group-hover:md:items-end group-hover:md:pr-2"
+      >
+        <div>
+          <span
+            class="font-semibold hidden md:group-hover:inline-block tracking-widest text-white"
+            >Menu</span
+          >
+          <i
+            class="fa-solid fa-sliders mb-4 text-2xl bg-white rounded-full p-1 border-2 border-black"
+          ></i>
+        </div>
+        <div class="flex flex-col space-y-4 group-hover:md:items-end">
+          <div
+            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px]"
+          >
+            <span
+              class="font-semibold hidden md:group-hover:inline-block tracking-widest"
+              >Settings</span
+            >
+            <a href="#" title="Settings" class="ml-[.15rem]">
+              <i
+                class="fa-solid fa-gear transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200"
+              ></i>
+            </a>
+          </div>
+          <div
+            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px]"
+          >
+            <span
+              class="font-semibold hidden md:group-hover:inline-block tracking-widest"
+              >Deep CL</span
+            >
+            <a href="#" title="Deep Clean">
+              <i
+                class="fa-solid fa-hand-sparkles transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200"
+              ></i>
+            </a>
+          </div>
+          <div
+            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px]"
+          >
+            <span
+              class="font-semibold hidden md:group-hover:inline-block tracking-widest"
+              >General
+            </span>
+            <a href="#" title="General Clean" class="ml-[0.35rem]">
+              <i
+                class="fa-solid fa-spray-can-sparkles transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200 group-hover:md:ml-1"
+              ></i>
+            </a>
+          </div>
+          <div class="group-hover:md:bg-slate-100 group-hover:md:p-2">
+            <span
+              class="font-semibold hidden md:group-hover:inline-block tracking-widest"
+              >Maint CL</span
+            >
+            <a href="#" title="Maintenance Clean" class="ml-[0.35rem]">
+              <i
+                class="fa-solid fa-calendar-check transition-all text-lg hover:scale-110 hover:text-white md:ml-0 md:hover:text-emerald-600 hover:rotate-[360deg] duration-200"
+              ></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Of Sidebar -->
     <div class="container">
       <!-- Card -->
       <div class="bg-white rounded-2xl max-w-5xl mx-auto shadow-xl py-5 my-5">
