--- a/index.html
+++ b/index.html
@@ -21,9 +21,43 @@
     <title>Maid Quote Calculator</title>
   </head>
   <body class="bg-[#e9eef6]">
-    <h1 class="text-3xl font-semibold text-center py-4 font-serif">
+    <h1
+      class="text-3xl font-semibold text-center py-4 font-serif dark:text-green-400"
+    >
       Maid Quote Calculator
     </h1>
+    <!-- Modal -->
+    <div
+      class="modal bg-black bg-opacity-70 h-screen absolute top-0 left-0 w-full backdrop-blur-sm flex items-center justify-center invisible"
+    >
+      <div
+        class="bg-white p-8 shadow-lg rounded-xl relative w-2/3 max-w-md dark:bg-zinc-700 dark:text-white"
+      >
+        <div class="flex items-center justify-between">
+          <small class="tracking-widest font-semibold text-xl">Settings</small>
+          <!-- Toggler -->
+          <div
+            class="bg-gray-500 w-12 h-6 cursor-pointer rounded-3xl toggler dark:bg-green-500 flex items-center transition-all"
+          >
+            <div
+              class="bg-white w-6 h-6 scale-75 rounded-3xl transition-transform dark:bg-black flex items-center justify-center dark:translate-x-6"
+            >
+              <span class="sun">
+                <i class="fa-solid fa-sun scale-75 text-yellow-500"></i>
+              </span>
+              <span class="moon hidden">
+                <i class="fa-solid fa-moon text-white"></i>
+              </span>
+            </div>
+          </div>
+          <!-- End Of Toggler -->
+        </div>
+        <button class="close-modal">
+          <i class="fa-solid fa-rectangle-xmark absolute top-2 left-2"></i>
+        </button>
+      </div>
+    </div>
+    <!-- End Of Modal -->
     <!-- Sidebar -->
     <div
       class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:-translate-x-1 hover:rounded-tl-none hover:rounded-bl-none hover:bg-emerald-600 transition-all shadow-2xll flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 md:-translate-x-24 group"
@@ -50,7 +84,7 @@
             >
             <a href="#" title="Settings" class="ml-[.15rem]">
               <i
-                class="fa-solid fa-gear transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200"
+                class="fa-solid fa-gear transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200 settings"
               ></i>
             </a>
           </div>
