cleaned up code a little bit and added proper comments

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
       <div
         class="absolute top-2 left-1/2 w-3/4 max-w-md transform -translate-x-1/2 bg-gradient-to-br from-emerald-700 to-neutral-800 text-center text-white tracking-widest p-2 shadow-xl rounded-xl border-2 border-white transition-all opacity-0 alert"
       >
-        <i class="fa-solid fa-circle-exclamation"></i>
-        <p>Settings will be applied on next estamite</p>
+        Text from Javascript is iserted here
       </div>
       <div
         class="bg-white p-3 shadow-lg rounded-xl w-[70vw] max-w-sm dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
