changed save buttons to look smaller

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
               <!-- End Of Change Hours Container -->
               <div class="bg-slate-200 py-2 px-4 mt-3 w-4/5 mx-auto md:w-full">
                 <button
-                  class="bg-neutral-700 py-1 px-4 text-white tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
+                  class="bg-neutral-700 py-1 px-4 text-white text-sm tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
                 >
                   <i class="fa-solid fa-floppy-disk"></i>
                   Save Quote
@@ -722,7 +722,7 @@
               </div>
               <div class="bg-slate-200 py-2 px-4 mt-3 w-4/5 mx-auto md:w-full">
                 <button
-                  class="bg-neutral-700 py-1 px-4 text-white tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
+                  class="bg-neutral-700 py-1 px-4 text-white text-sm tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
                 >
                   <i class="fa-solid fa-floppy-disk"></i>
                   Save Quote
@@ -820,7 +820,7 @@
               </div>
               <div class="bg-slate-200 py-2 px-4 mt-3 w-4/5 mx-auto md:w-full">
                 <button
-                  class="bg-neutral-700 py-1 px-4 text-white tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
+                  class="bg-neutral-700 py-1 px-4 text-white text-sm tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
                 >
                   <i class="fa-solid fa-floppy-disk"></i>
                   Save Quote
@@ -918,7 +918,7 @@
               </div>
               <div class="bg-slate-200 py-2 px-4 mt-3 w-4/5 mx-auto md:w-full">
                 <button
-                  class="bg-neutral-700 py-1 px-4 text-white tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
+                  class="bg-neutral-700 py-1 px-4 text-white text-sm tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
                 >
                   <i class="fa-solid fa-floppy-disk"></i>
                   Save Quote
@@ -1016,7 +1016,7 @@
               </div>
               <div class="bg-slate-200 py-2 px-4 mt-3 w-4/5 mx-auto md:w-full">
                 <button
-                  class="bg-neutral-700 py-1 px-4 text-white tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
+                  class="bg-neutral-700 py-1 px-4 text-white text-sm tracking-widest border-[3px] border-emerald-600 transition-colors hover:bg-neutral-600 dark:bg-neutral-800 dark:hover:bg-neutral-700 quote-btn"
                 >
                   <i class="fa-solid fa-floppy-disk"></i>
                   Save Quote
