fixed issues with mobile frendly, had to add some small breakpoints in tailwind config file

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       <div
         class="bg-white p-3 shadow-lg rounded-xl w-[80vw] max-w-sm max-h-[95vh] overflow-y-scroll dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
       >
-        <div class="px-4 pt-2">
+        <div class="p-2">
           <!-- Quote Heading -->
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
             <button class="back-btn">
@@ -472,7 +472,7 @@
               </button>
               <!-- Show Cleans -->
               <div
-                class="w-full h-[258px] xss:h-[200px] xs:h-[158px] overflow-x-hidden mx-auto hidden show-cleans slide-container relative"
+                class="w-full h-[230px] xss:h-[190px] xs:h-[158px] overflow-x-hidden overflow-y-hidden mx-auto hidden show-cleans slide-container relative"
               >
                 <button
                   class="absolute top-1/2 right-0 text-xl hover:animate-bounce cursor-pointer z-10 next-btn"
