fixed issue with saving quote form not having the right name. It was showing the origanal every time, now it shows with the numbers at the end if it is a duplacate name

--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
           >
             <!-- Deep Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 deep-article"
             >
               <i
                 class="fa-solid fa-hand-sparkles p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
@@ -1025,7 +1025,7 @@
 
             <!-- General Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 general-article"
             >
               <i
                 class="fa-solid fa-spray-can-sparkles p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
@@ -1123,7 +1123,7 @@
 
             <!-- Weekly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 weekly-article"
             >
               <i
                 class="fa-solid fa-calendar-week p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
@@ -1221,7 +1221,7 @@
 
             <!-- Bi-Weekly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 bi-weekly-article"
             >
               <i
                 class="fa-solid fa-calendar-day p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
@@ -1319,7 +1319,7 @@
 
             <!-- Monthly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 monthly-article"
             >
               <i
                 class="fa-solid fa-calendar-days p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
